<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appneia</string>
    <string name="file_record_answers">recorded_answers.txt</string>
    <string name="file_record_sensors">recorded_sensors.txt</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="loading">Loading..</string>
    <string name="loaded">Loaded.</string>
    <string name="error_form">Sorry, you need to answer all questions.</string>
    <string name="error_saving">Sorry, we are having problems to save data in your device.</string>
    <string name="error_loading_preferences">Sorry, we are having problems to load preferences.</string>
    <string name="new_record">New record</string>
    <string name="stored_records">Stored records</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_new_record_before_sleep_form">Appneia - Before sleep form</string>
    <string name="title_activity_new_record_monitoring">Appneia - Monitoring</string>
    <string name="title_activity_new_record_after_sleep_form">Appneia - After sleep form</string>
    <string name="title_activity_stored_records">Appneia - Stored records</string>
    <string name="title_activity_preferences">Appneia - Preferences</string>
    <string name="alert_finish_monitoring_title">Finish monitoring</string>
    <string name="alert_finish_monitoring_message">Are you sure that you want to finish?</string>
    <string name="before_sleep_form">Before sleep form</string>
    <string name="before_sleep_first_question">Did you sleep well?</string>
    <string name="before_sleep_second_question">Have you taken any medication today?</string>
    <string name="before_sleep_third_question">Did you consume some alcoholic beverage today?</string>
    <string name="before_sleep_start_monitoring">Start monitoring</string>
    <string name="monitoring">Monitoring sleep</string>
    <string name="monitoring_greeting">Have a good night\'s sleep!</string>
    <string name="monitoring_finalize_monitoring">Monitoring finalization</string>
    <string name="after_sleep_form">After sleep form</string>
    <string name="after_sleep_first_question">Did you sleep well tonight?</string>
    <string name="after_sleep_second_question">Did you have any difficulty falling asleep?</string>
    <string name="after_sleep_third_question">Did you wake up during the night?</string>
    <string name="after_sleep_finalize">Finalize</string>
    <string name="after_sleep_success">Your data has been successfully saved!</string>
    <string name="preferences_records_folder">Records folder</string>
    <string name="preferences_records_folder_free_space"> MB of free space</string>
    <string name="preferences_audio_recording_format">Recording format</string>
    <string name="preferences_audio_recording_format_summary">Final extension of the recorded audio</string>
    <string name="preferences_audio_mp3_kbps">MP3 kbps</string>
    <string name="preferences_audio_mp3_kbps_summary">Recording quality used in MP3 format</string>
    <string name="preferences_audio_source">Audio source</string>
    <string name="preferences_audio_source_summary">Mic used to record the audio</string>
    <string name="preferences_audio_sample_rate">Audio sample rate in Hz</string>
    <string name="preferences_audio_sample_rate_summary">Frequency of samples acquisition</string>
    <string name="preferences_audio_channels">Number of input channels</string>
    <string name="preferences_audio_channels_summary">Define if the recording is Mono or Stereo</string>
    <string name="preferences_audio_encoding">Encoding</string>
    <string name="preferences_audio_encoding_summary">Audio codification or compression</string>
    <string name="preferences_sensor_sample_rate">Sensors sample rate</string>
    <string name="preferences_sensor_sample_rate_summary">Frequency of sensors sample acquisition</string>
    <string name="preferences_sensors">Sensors</string>
    <string name="stored_records_list">List</string>
        
</resources>
