<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textViewNewRecordAfterSleepForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_record"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewAfterSleepForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_sleep_form"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollViewAfterSleepForm"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewAfterSleepFormFirstQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_sleep_first_question"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupAfterSleepFormFirstQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioAfterSleepFormFirstQuestionYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioAfterSleepFormFirstQuestionNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewAfterSleepFormSecondQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_sleep_second_question"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupAfterSleepFormSecondQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioAfterSleepFormSecondQuestionYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioAfterSleepFormSecondQuestionNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewAfterSleepFormThirdQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_sleep_third_question"
                android:textAppearance="?android:attr/textAppearanceMedium" />

           <RadioGroup
                android:id="@+id/radioGroupAfterSleepFormThirdQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioAfterSleepFormThirdQuestionYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioAfterSleepFormThirdQuestionNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAfterSleepFormSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/after_sleep_finalize" />
    
</LinearLayout>
