<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textViewStoredRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stored_records"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewStoredRecordsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stored_records_list"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/ListView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light"  >
    </ListView>

    <Button
        android:id="@+id/buttonStoredRecordsBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>
