<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" 
    android:background="@color/background_floating_material_dark">

    <TextView
        android:id="@+id/textViewNewRecordMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_record"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textViewMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoring"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"/>

    <ScrollView
        android:id="@+id/scrollViewMonitoring"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_dark" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:orientation="vertical" 
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp" >

            <TextView
                android:id="@+id/textViewMonitoringGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitoring_greeting"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="@android:color/white"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonMonitoringFinalizeMonitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitoring_finalize_monitoring" 
        android:textColor="@android:color/white"/>
    
</LinearLayout>
